--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scrollbar-hide">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="/logo.ico" />
